<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skin Condition Log</string>
    <string name="TakePhoto">Take New Photo</string>
    <string name="ViewLogs">View Condition Logs</string>
    <string name="MainViewTitle">Skin Condition Log</string>
    <string name="EmptyList">There are no photos in the list.</string>
    <string name="listNameLabel">Skin Condition Log Name</string>
    <string name="sortLog">Log</string>
    <string name="sortTag">Tag</string>
    <string name="sortTime">Time</string>
    <string name="sortBy">Sort by:"</string>
    <string name="sortLabel">Select or create a condition list:</string>
    <string name="newLog">Create Log</string>
    <string name="deleteLog">Delete Log</string>
    <string name="viewLog">View Log</string>
    <string name="nameHint">Name the new Condition Log</string>
    <string name="createLog">Create Condition Log</string>
    <string name="createLogDesc">Please type in the name that you wish to call the new Condition Log. </string>
    <string name="createLogTitle">New Condition Log</string>
    <string name="newPicDesc">Tap the middle to generate a new picture.</string>
    <string name="TagDescr">Add tags to the photo, separated by spaces.</string>
    <string name="spinner_prompt">Select a list</string>
    <string name="ListDescr">And select a list or add to a new one.</string>
    <string name="CreateDescr">or</string>
    <string name="newPhotoLog">Create New Log</string>
    <string name="tagEx">tag1 tag2 etc</string>
    <string name="SaveLabel">Save Photo</string>
    <string name="newPassword">Please enter a password:</string>
    <string name="enterPassword">Please enter your password:</string>
    <string name="compare">Compare</string>
    <string name="delete">Delete</string>
    <string name="selectedLabel">"Selected List Name: "</string>
    <string name="deleteTag">Delete Tag</string>
    <string name="addTag">Add Tag</string>
    <string name="timeLabel">&quot;Timestamp: &quot;</string>
    <string name="tagtitle">&quot;Tags: &quot;</string>
    <string name="tags"></string>
    <string name="newPassText">Please set a password for this application</string>

</resources>
