<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:padding="10dip" >

	    <TextView
	        android:id="@+id/sortLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sortLabel" />
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <Button
		        android:id="@+id/TagButton"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_weight="0.5"
		        android:text="@string/sortTag" />
	
		    <Button
		        android:id="@+id/LogButton"
		        android:layout_width="wrap_content"
		        android:layout_height="40dip"
		        android:layout_weight="0.5"
		        android:text="@string/sortLog" />
		</LinearLayout>

	</LinearLayout>

<ListView
    android:id="@+id/android:list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    />
<TextView
    android:id="@+id/android:empty"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:text="@string/EmptyList"/>
</LinearLayout>
