<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ViewLogsButton"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ViewLogs" />

    <Button
        android:id="@+id/TakePhotoButton"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_above="@+id/ViewLogsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/TakePhoto" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/MainViewTitle"
        android:textSize="30dp"
        android:textColor="#FFFFFFFF"/>

</RelativeLayout>