<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/createLogTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="97dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dip" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/nameHint"
            android:inputType="text"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/CreateLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/createLog" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:padding="20dip"
        android:text="@string/createLogDesc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>