<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center|top"
    android:orientation="vertical" >


	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:padding="10dip" >

	    <TextView
	        android:id="@+id/sortLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sortLabel" />
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:visibility="invisible">
		</LinearLayout>

	</LinearLayout>
<ListView
    android:id="@+id/list"
    android:layout_width="fill_parent"
    android:layout_height="355dp" />

<TextView
    android:id="@+id/empty"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/EmptyList"
    android:visibility="invisible" />

<Button
   android:id="@+id/NewLogButton"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/newLog" />
</LinearLayout>
